Lots of changes: Changed image cycle to bootstrap carousel. Rounded project windows to look circular. Issues with different window sizes cause some windows to look elliptical instead. Changed layout at xs and sm viewports. Project bubbles will now sit alongside a text description of them. Removed the carousel text for simplicity. Added text in the navbar to identify viewport size. Remove before launch. Feedback window exit animation is now zoom to right. This is to reduce the flicker after animation effect. Background color is less yellow ad more bluish-red-purple.

--- a/CSS/animations.css
+++ b/CSS/animations.css
@@ -14,13 +14,19 @@
     0% {transform: translateX(-100vw);} 
     100%{transform: translateX(0vw);}
 }
+@keyframes zoom-to-right-disappear{
+    0% {transform: translateX(0vw);} 
+    99%{transform: translateX(+100vw);}
+    100%{display:none;}
+}
+
 @keyframes collapse-out{
     0%{transform:scale(100%);}
     98%{transform:scaleY(0%);}
     100%{display:none;}
 }
 
-@keyframes cycle-pics-1{
+/* @keyframes cycle-pics-1{
     0%{background-image: url("../images/Corner_Cafe/CSS-Cafe.png");}
     25%{background-image: url("../images/Corner_Cafe/CSS-Cafe.png");}
     50%{background-image: url("../images/Corner_Cafe/CSS-Cafe.png");}
@@ -46,5 +52,5 @@
     25%{background-image: url("../images/Earth.jpg");}
     50%{background-image: url("../images/CSS-Cafe.png");}
     75%{background-image: url("../images/tree-by-Bessi-pixbay.jpg");}
-    100%{background-image: url("../images/tree-by-Bessi-pixbay.jpg");}
-}
+    100%{background-image: url("../images/tree-by-Bessi-pixbay.jpg");} 
+}*/
