--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -67,6 +67,17 @@ ul {
     padding: 1em;
     
 }
+.transparent-circle{
+    /* display: inline-block; */
+    background-color: rgba(0,0,0,.8);
+    border-radius: 50%;
+    margin: 1vw;
+    padding: 1em;
+    
+}
+.circle-image img{
+    border-radius: 50%;
+}
 .transparent-bar {
     background:linear-gradient(to bottom,rgba(0,0,0,.8),rgba(0,0,0,0)); 
     margin:0px;
@@ -166,12 +177,16 @@ ul {
     animation-duration:.5s ;
     animation-fill-mode: both;
     animation-name: collapse-out;
-
 }
-.picture-reel-1, .picture-reel-2, .picture-reel-3, .picture-reel-4{
+.zoom-out-to-right{
+    animation-duration:.5s ;
+    animation-fill-mode: both;
+    animation-name: zoom-to-right-disappear;
+}
+
+/* .picture-reel-1, .picture-reel-2, .picture-reel-3, .picture-reel-4{
     width: 100%;
-    height:auto;
-    padding-bottom:100%;
+    height:20vw;
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -181,8 +196,8 @@ ul {
         animation-iteration-count: infinite;
         animation-timing-function: ease-in-out;
     }
-}
-.picture-reel-1{
+} */
+/* .picture-reel-1{
     background-image: url("../images/Corner_Cafe/CSS-Cafe.png");
     &:hover{
         animation-name: cycle-pics-1;
@@ -205,6 +220,18 @@ ul {
     &:hover{
         animation-name: cycle-pics-4;
     }
+} */
+
+.match-height-to-width {
+	position: relative;
+    padding-bottom: 100%;
+	height: 0;
 }
 
+.container-like-ratio img {
 
+    width: 100%;
+    height: 24vw;
+    object-fit: contain;
+
+}
